# poi-manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.ci.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
poi_manager/: admin.py  apps.py  cache.py  filtersets.py  jobs.py  mixins.py  urls.py  utils.py
poi_manager/api/: __init__.py  serializers.py  urls.py  views.py
poi_manager/management/: __init__.py
poi_manager/management/commands/: import_pois.py  recalculate_ratings.py
poi_manager/migrations/: 0001_initial.py  0002_add_processing_time.py  0003_performance_indexes.py
poi_manager/models/: __init__.py  import_batch.py  poi.py
poi_manager/parsers/: __init__.py  base.py  csv_parser.py  json_parser.py  xml_parser.py
poi_manager/tests/: __init__.py  test_api.py  test_commands.py  test_models.py  test_parsers.py
poi_manager/tests/fixtures/: test_pois.csv  test_pois.json  test_pois.xml
poi_manager_project/: asgi.py  settings.py  urls.py  wsgi.py
