[project]
name = "poi-manager"
version = "1.0.0"
requires-python = ">=3.10"
description = "A Django application for managing Points of Interest with geospatial capabilities"
readme = "README.md"
license = "MIT"
dependencies = [
    "Django==5.2.6",
    "djangorestframework==3.16.1",
    "django-filter==25.1",
    "django-cors-headers==4.7.0",
    "psycopg[c,pool]==3.2.9",
    "django-rq==3.1",
    "rq==2.5.0",
    "redis==6.4.0",
    "lxml==6.0.1",
    "Pillow==11.3.0",
    "django-debug-toolbar==6.0.0",
    "ipython==8.31.0",
    "gunicorn==23.0.0",
    "whitenoise==6.9.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "chardet==5.2.0",
    "ijson==3.4.0",
]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
skip-string-normalization = true

[tool.isort]
profile = "black"